# pharmacy-db-v2.0.0

./: .gitignore  requirements.txt
pharmacy-db/: .env.example  .gitignore  Dockerfile  GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pharmacy-db/alembic/: env.py
pharmacy-db/alembic/versions/: 074031d4b16c_create_pharmacies_table.py  383b1486c0ae_create_assessments_table.py  5f15e389a585_create_regulatory_bodies_table.py  6bd38bbfcee2_create_findings_table.py  6dbe9a577a79_create_cases_table_and_link_documents.py  7a1c079591e3_make_jurisdiction_nullable.py  7a723d07086f_create_inspectgors_table.py  ca41b23ba8be_create_finding_categories_table.py  db51a7e1beb1_create_documents_table.py
pharmacy-db/app/: config.py  db.py  main.py
pharmacy-db/app/ingest/: loader.py
pharmacy-db/app/models/: assessment.py  base.py  case.py  document.py  finding.py  finding_category.py  inspector.py  pharmacy.py  regulatory_body.py
pharmacy-db/app/routers/: assessments.py  cases.py  documents.py  finding_categories.py  findings.py  inspectors.py  pharmacies.py  regulatory_bodies.py
pharmacy-db/app/schemas/: assessment.py  case.py  document.py  finding.py  finding_category.py  inspector.py  pharmacy.py  regulatory_body.py
pharmacy-db/app/services/: assessments.py  (+7 more)
pharmacy-db/samples/: sample_output_castledowns.json
pharmacy-db/tests/: conftest.py  test_assessments.py  test_cases.py  test_documents.py  test_finding_categories.py  test_findings.py  test_health.py  test_inspectors.py  test_loader.py  test_pharmacies.py  test_regulatory_bodies.py
(+14 files in other folders)
